drkns 18.04.2017 22:21:06 +0000 - build 4937

1. Рефакторинг.

drkns 17.04.2017 22:16:12 +0000 - build 4936

1. Panel.RememberLogicalDrives теперь, наверное, можно пользоваться - сохранённый список дисков будет обновлён при необходимости.

2. При запуске с плагиновых панелей удаление временного файла производится после закрытия панели, а не сразу.

3. Рефакторинг.

drkns 12.04.2017 18:58:51 +0000 - build 4935

1. Продолжение 4934.

drkns 11.04.2017 07:51:48 +0000 - build 4934

1. Обработка Num-клавиш в меню редактирования режимов панелей.

drkns 08.04.2017 19:00:16 +0000 - build 4933

1. Рефакторинг.

drkns 06.04.2017 07:53:14 +0000 - build 4932

1. Не работал вайп пустых файлов.

drkns 05.04.2017 20:10:41 +0000 - build 4931

1. Уточнение 4928.

2. Пара мелочей.

zg 05.04.2017 20:41:01 +0200 - build 4930

1. 0003419: Crash при ресайзе окна содержащего открытый выпадающий спискок.

svs 02.04.2017 20:22:22 +0300 - build 4929

1. SQLite 3.18.0

drkns 01.04.2017 13:54:43 +0000 - build 4928

1. Рефакторинг.

shmuel 28.03.2017 13:40:20 +0200 - build 4927

1. M#3415: ошибка в menu.itemstatus

drkns 26.03.2017 12:56:32 +0000 - build 4926

1. Рефакторинг.

zg 26.03.2017 14:48:27 +0200 - build 4925

1. RestoreScreen сразу восстанавливает содержимое экрана.

drkns 24.03.2017 18:18:14 +0000 - build 4924

1. Уточнение 4923.

drkns 23.03.2017 23:28:58 +0000 - build 4923

1. Рефакторинг.

w17 23.03.2017 21:39:02 +0300 - build 4922

1. forum: Автоматическая замена шары на букву диска
   При переходе из списка шар сервера к выделенному элементу по Enter теперь не происходит
   переход к диску (если он назначен), по CtrlPgDn - старое поведение (если есть диск - переход к нему).

drkns 21.03.2017 20:39:52 +0000 - build 4921

1. From the forum: Crash in cancelled file edit in NetBox

drkns 21.03.2017 01:31:42 +0000 - build 4920

1. Не всегда загружались отладочные символы.

2. Рефакторинг.

drkns 20.03.2017 23:25:32 +0000 - build 4919

1. Уточнение 4888.
