@@ -105,6 +105,7 @@ Vlad Lozynskyi
 Kate Fedorova
 Mauro72
 dimfish
+Dmitri Davydok
 
 And special thanks to all of our community members!
 You are not less important than the people mentioned here.
