@@ -256,6 +256,10 @@ $ # Far: параметры командной строки#
 если какой-либо из конфигурационных файлов не существует. Параметр templateprofile
 перекрывает значение TemplateProfile из Far.exe.ini.
 
+  #/title[:<valuestring>]#
+  Если указана <valuestring>, то использовать её как заголовок окна;
+  иначе, наследовать заголовок окна консоли.
+
   #/clearcache [profilepath [localprofilepath]]#
   Очистить кэш плагинов и завершить работу.
   Необязательный параметр profilepath задаёт полный путь к конфигурационным файлам.
