@@ -1,3 +1,14 @@
+drkns 22.04.2017 14:04:11 +0000 - build 4938
+
+1. 0003424: Новый параметр командной строки для наследования заголовка консоли
+
+2. Уточнение работы дополнения:
+   - сортировка без учёта кавычек
+   - сохранение уже введённого регистра
+   - выделение учтывает позицию курсора
+
+3. Рефакторинг.
+
 drkns 18.04.2017 22:21:06 +0000 - build 4937
 
 1. Рефакторинг.
